banner overflow fixed

--- a/eco_project_react/src/components/banner/banner.module.sass
+++ b/eco_project_react/src/components/banner/banner.module.sass
@@ -1,7 +1,7 @@
 .banner
   display: flex
   justify-content: space-between
-
+  overflow: hidden
   height: 320px
 
   border-radius: 24px
