--- a/eco_project_react/src/components/swiper/bannerSwiper.module.sass
+++ b/eco_project_react/src/components/swiper/bannerSwiper.module.sass
@@ -3,6 +3,7 @@
   margin-top: 40px
   text-align: left
   position: static
+  overflow: hidden
 
 .customSwiperWrapper
   position: relative
